@@ -1,3 +1,7 @@
+2006-07-10  Niko Mirthes  <nmirthes@gmail.com>
+
+	* legacy-icon-mapping.xml: Update with some changes for KDE
+
 2006-07-09  Rodney Dawes  <dobey@novell.com>
 
 	* legacy-icon-mapping.xml: Move the link for the
